--- a/canvas.html
+++ b/canvas.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <title>Untitled Project...</title>
+    <script src="scripts/babylon.custom.js"></script>
+    <script src="scripts/game.js"></script>
+     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-
+    <canvas id="renderCanvas"></canvas>
   </body>
 </html>
