--- a/canvas.html
+++ b/canvas.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <title>Untitled Project...</title>
-    <script src="scripts/tools/babylon.custom.js"></script>
     <script src="scripts/game.js"></script>
+    <script src="scripts/tools/babylon.custom.js"></script>
     <script src="scripts/tools/babylon.inspector.bundle.js"></script>
-     <link rel="stylesheet" type="text/css" href="styles/style.css">
+     <link rel="stylesheet" type="text/css" href="styles/styles.min.css">
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
