--- a/canvas.html
+++ b/canvas.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html" charset="utf-8">
-    <title>Untitled Project...</title>
-    <script src="scripts/game.js"></script>
-    <script src="scripts/tools/babylon.custom.js"></script>
-    <script src="scripts/tools/babylon.inspector.bundle.js"></script>
-     <link rel="stylesheet" type="text/css" href="styles/styles.min.css">
-  </head>
-  <body>
-    <canvas id="renderCanvas"></canvas>
-  </body>
+
+<head>
+  <meta http-equiv="content-type" content="text/html" charset="utf-8">
+  <title>Untitled Project...</title>
+  <script src="scripts/game.js"></script>
+  <script src="scripts/tools/babylon.custom.js"></script>
+  <script src="scripts/tools/babylon.inspector.bundle.js"></script>
+  <!-- <link rel="stylesheet" type="text/css" href="styles/styles.min.css" /> -->
+</head>
+<style media="screen">
+  body,
+  html {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  #renderCanvas {
+    width: 100%;
+    height: 100%;
+    touch-action: none;
+  }
+</style>
+
+<body>
+  <canvas id="renderCanvas"> </canvas>
+</body>
+
 </html>
